--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "visitorapi": "^2.0.0"
   },
   "scripts": {
     "start": "node server.js"
